Fix column jumping when sorting desktop

--- a/src/components/pages/liquidity-page/components/Pools/DesktopPools/DesktopPools.module.css
+++ b/src/components/pages/liquidity-page/components/Pools/DesktopPools/DesktopPools.module.css
@@ -2,25 +2,34 @@
   border-radius: 16px;
   background-color: var(--background-grey-dark);
   border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: collapse;
 }
 
 .desktopPools th {
   font-size: 16px;
   line-height: 19px;
-  font-weight: 400;
+  font-weight: 500;
   color: var(--content-tertiary);
   border-bottom: 1px solid var(--background-grey-darker);
 }
 
-.desktopPools th, .desktopPools td {
+.desktopPools th,
+.desktopPools td {
   padding: 16px 24px;
+  text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .desktopPools th:first-child {
   text-align: left;
 }
 
-.desktopPools th:not(:first-child), .desktopPools td:not(:first-child) {
+.desktopPools th:not(:first-child),
+.desktopPools td:not(:first-child) {
   text-align: center;
 }
 
@@ -39,4 +48,21 @@ button.createButton {
   font-weight: 500;
   color: var(--content-tertiary);
   padding: 16px 24px;
+}
+
+.desktopPools th:nth-child(1) {
+  width: 30%;
+}
+
+.desktopPools th:nth-child(2) {
+  width: 15%; /* Width for the "APR" column */
+}
+
+.desktopPools th:nth-child(3),
+.desktopPools th:nth-child(4) {
+  width: 15%; /* Width for "24H Volume" and "TVL" columns */
+}
+
+.desktopPools th:nth-child(5) {
+  width: 20%; /* Width for the "Create Pool" column */
 }
